# stacy_burke_trading

./: .env.example  .gitignore  ACB_Stacyburke.txt  CLAUDE.md  PLAN.md  README.md  backtest_discards_summary.csv  backtest_discards_would_have_hit.csv  main.py  notebooklm_sync.py  pyproject.toml  requirements.txt  tmp_coil_stats.py  tmp_sideways_stats.py  tmp_status.py  tmp_summary.py  tmp_telegram_ping.py
.claude/: launch.json  settings.local.json
_agents/: agent.md
_agents/skills/stacy_burke_trading/: SKILL.md
acb_trader/: __init__.py  config.py  models.py
acb_trader/backtest/: __init__.py  data_loader.py  engine.py  optimizer.py  run_backtest.py
acb_trader/data/: __init__.py  calendar.py  feed.py  levels.py  three_boxes.py
acb_trader/db/: __init__.py  discard_log.jsonl  models.py  session_state.json  session_state.template.json  session_tracker.py
acb_trader/execution/: __init__.py  coil.py  news_rearm.py  orders.py  session.py  sizing.py  state_machine.py
acb_trader/guards/: __init__.py  checklist.py
acb_trader/notifications/: __init__.py  telegram.py
acb_trader/signals/: __init__.py  _scoring.py  classify.py  patterns.py  setups.py  watchlist.py  weekly.py
acb_trader/tests/: test_patterns_and_scoring.py
