[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acb-trader"
version = "0.1.0"
description = "Stacy Burke ACB / Best Trade Setups automated EOD trading bot"
requires-python = ">=3.11"
dependencies = [
    "MetaTrader5>=5.0.45",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "schedule>=1.2.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["acb_trader*"]
